--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(by_cluster_sampling)
 export(color_repel)
 export(get_labs)
 export(gg_color_repel)
+export(label_repel)
 importFrom(matrixStats,colRanks)
 importFrom(matrixStats,rowMaxs)
 importFrom(matrixStats,rowMedians)
