--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,9 +12,9 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Depends: R (>= 3.5.0)
 Imports:
     grDevices,
-    colorspace,
     matrixStats,
     Matrix,
     distances,
@@ -24,8 +24,8 @@ Imports:
     purrr,
     dplyr,
     stringr,
-    tibble,
-    tidyr,
-    ggplot2
+    ggplot2,
+    ggrepel,
+    ggalt
 URL: https://github.com/raysinensis/color_repel
 ByteCompile: true
