--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: colorrepel
-Title: Repel visually similar colors away for colorblind users in various plots
+Title: Repel Visually Similar Colors For Colorblind Users In Various Plots
 Version: 0.1.0
 Authors@R: 
     person(given = "Rui",
@@ -7,7 +7,7 @@ Authors@R:
            role = c("cre", "aut"),
            email = "raysinensis@gmail.com",
            comment = c(ORCID = "0000-0001-8183-4549"))
-Description: Iterate and repel visually similar colors away in various ggplot plots, to be more friendly toward colorblind users.
+Description: Iterate and repel visually similar colors away in various 'ggplot2' plots, to be more friendly toward colorblind users.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
