plotly image insertion

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ export(by_cluster_sampling)
 export(color_repel)
 export(get_labs)
 export(gg_color_repel)
+export(ggplotly_background)
 export(label_repel)
