--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: colorrepel
 Title: Repel Visually Similar Colors for Colorblind Users in Various Plots
-Version: 0.1.1
+Version: 0.2.0
 Authors@R: 
     person(given = "Rui",
            family = "Fu",
@@ -27,7 +27,10 @@ Imports:
     stringr,
     ggplot2,
     ggrepel,
-    ggalt
+    ggalt,
+    plotly,
+    knitr,
+    base64enc
 Suggests:
     colorspace
 URL: https://github.com/raysinensis/color_repel
